2005-10-26  Marek Safar  <marek.safar@seznam.cz>

	* attribute.cs (GetPropertyValue): Made public.

	* codegen.cs (AssemblyClass): ResolveClsCompliance renamed to
	Resolve.
	Add new property WrapNonExceptionThrows to handle 2.0 assembly
	attribute.
	(AssemblyClass.Emit): Emit RuntimeCompatibilityAttribute when it
	is not defined.
	
	* driver.cs: Reflect method name change.
	
	* statement.cs (Try.Resolve): Warn when try has both general
	exception handlers.
	
	* typemanager.cs: runtime_compatibility_attr_type new predefined
	type.

2005-10-26  Raja R Harinath  <harinath@gmail.com>

	Fix #76419.
	* pending.cs (InterfaceMethod): Allow tm.args [i] to be null --
	treat it as an empty parameter list.

2005-10-26  Raja R Harinath  <rharinath@novell.com>

	Fix #76271.	
	* ecore.cs (SimpleName.DoSimpleNameResolve): Make fall-back 
	ResolveAsTypeStep silent.
	* statement.cs (Block.AddConstant): Mark block as used.
	(Block.ResolveMeta): Avoid piling on error messages
	if a constant initializer resolution fails.

2005-10-25  Raja R Harinath  <rharinath@novell.com>

	* namespace.cs (RootNamespace.VerifyUsingForAll, Namespace.VerifyUsing):
	Remove.
	(NamespaceEntry.VerifyAllUsing): New.
	(NamespaceEntry.AliasEntry.Resolve): New.  Handles common error
	behaviour.  Delegates actual resolution of alias to ...
	(NamespaceEntry.DoResolve): ... this.  Renamed from Resolve.
	(NamespaceEntry.LocalAliasEntry, NamespaceEntry.ExternAliasEntry):
	Update.
	* driver.cs (Driver.MainDriver): Update.
	
	* namespace.cs (NamespaceEntry.DefineNamespace): Remove.
	(NamespaceEntry.SymbolFileID): Make into a on-demand computed
	property.
	(Namespace.DefineNamespaces, RootNamespace.DefineNamespacesForAll):
	Remove.
	* symbolwriter.cs (SymbolWriter.Initialize): Don't call
	RootNamespace.DefineNamespacesForAll.

2005-10-24  Raja R Harinath  <harinath@gmail.com>

	* typemanager.cs (assemblies, external_aliases, modules)
	(AddAssembly, AddExternAlias, AddModule GetAssemblies, Modules)